--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^11.11.11",
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.3.1",
     "react-flickity-component": "^4.0.7",
     "react-icons": "^5.3.0",
