--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.27.0",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
+    "react-toastify": "^11.0.3",
     "simplebar-react": "^3.2.6",
     "slick-carousel": "^1.8.1",
     "smooth-scroll": "^16.1.3",
